--- a/client-side/timetable-react/src/components/footer/Footer.module.css
+++ b/client-side/timetable-react/src/components/footer/Footer.module.css
@@ -4,11 +4,11 @@
     display: flex;
     background-color: black;
     color: white;
-    height: 200px;
+    height: 50px;
     box-sizing: border-box;
     width: 100%;
     justify-content: center;
-    align-items: flex-end;
+    align-items: center;
     font-family: 'Roboto', sans-serif;
     font-size: large;
     padding: 10px;
