--- a/client-side/timetable-react/src/components/table/card/Card.module.css
+++ b/client-side/timetable-react/src/components/table/card/Card.module.css
@@ -1,6 +1,6 @@
 .card{
     display: flex;
-    width: 250px;
+    /* min-width: 250px; */
     height: 75px;
     border: 1px solid green;
     flex-direction: column;
