--- a/client-side/timetable-react/src/components/CardContainer/CardContainer.module.css
+++ b/client-side/timetable-react/src/components/CardContainer/CardContainer.module.css
@@ -2,4 +2,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: #252427;
+    border-radius: 10px;
+    margin: 5px;
+    box-sizing: border-box;
+    padding: 5px;
+    color: white;
 }
