--- a/client-side/timetable-react/src/components/Table/Table.module.css
+++ b/client-side/timetable-react/src/components/Table/Table.module.css
@@ -1,15 +1,17 @@
 .table{
     display: flex;
     flex-direction: column;
-    align-items: center;
     grid-area: main;
+    margin: 10px 5px;
 }
 
 .cardContainers{
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 .groupName{
-    
+    color: white;
+    align-self: center;
 }
