--- a/client-side/timetable-react/src/components/Card/Card.module.css
+++ b/client-side/timetable-react/src/components/Card/Card.module.css
@@ -2,7 +2,6 @@
     display: flex;
     max-width: 300px;
     min-height: 70px;
-    /* border: 1px solid rgba(240, 44, 152, 0.616); */
     border-radius: 10px;
     box-sizing: border-box;
 
@@ -11,8 +10,11 @@
     padding: 5px;
     margin: 5px;
     color: white;
-    background-color: rgba(23, 134, 238, 0.418);
-    /* background-color: rgba(28, 150, 59, 0.589); */
+
+    border: 4px solid #0000;
+    border-radius: 10px;
+    animation: 5s rotate linear infinite;
+
 }
 
 .info {
@@ -21,10 +23,52 @@
     justify-content: space-between;
 }
 
-.pending{
-    background-color: aqua;
+
+
+
+.pending {
+    background: linear-gradient(#131219, #131219) padding-box, linear-gradient(var(--angle),
+            #14bae4,
+            #687aff) border-box;
 }
 
-.progress{
-    background-color: green;
+
+
+.progress {
+    background: linear-gradient(#131219, #131219) padding-box, linear-gradient(var(--angle),
+            #0af03c,
+            #16e4eb) border-box;
+}
+
+
+.canceled {
+    background: linear-gradient(#131219, #131219) padding-box, linear-gradient(var(--angle),
+            #f0530a,
+            #e91f04) border-box;
+}
+
+
+.modified {
+    background: linear-gradient(#131219, #131219) padding-box, linear-gradient(var(--angle),
+            #d89606,
+            #8ad80d) border-box;
+}
+
+
+.progress {
+    background: linear-gradient(#131219, #131219) padding-box, linear-gradient(var(--angle),
+            #a406ee,
+            #360cf1) border-box;
+}
+
+@keyframes rotate {
+    to {
+        --angle: 360deg;
+    }
+}
+
+@property --angle {
+    syntax: "<angle>";
+    initial-value: 0deg;
+    inherits: false;
 }
