--- a/client-side/timetable-react/src/components/Card/Card.module.css
+++ b/client-side/timetable-react/src/components/Card/Card.module.css
@@ -11,9 +11,13 @@
     margin: 5px;
     color: white;
 
+    --main-card-bg-color: #252427;
+
     border: 4px solid #0000;
     border-radius: 10px;
     animation: 5s rotate linear infinite;
+    background-color: var(--main-card-bg-color);
+    border: 4px solid #12b86a85;
 
 }
 
@@ -23,43 +27,6 @@
     justify-content: space-between;
 }
 
-
-
-
-.pending {
-    background: linear-gradient(#131219, #131219) padding-box, linear-gradient(var(--angle),
-            #14bae4,
-            #687aff) border-box;
-}
-
-
-
-.progress {
-    background: linear-gradient(#131219, #131219) padding-box, linear-gradient(var(--angle),
-            #0af03c,
-            #16e4eb) border-box;
-}
-
-
-.canceled {
-    background: linear-gradient(#131219, #131219) padding-box, linear-gradient(var(--angle),
-            #f0530a,
-            #e91f04) border-box;
-}
-
-
-.modified {
-    background: linear-gradient(#131219, #131219) padding-box, linear-gradient(var(--angle),
-            #d89606,
-            #8ad80d) border-box;
-}
-
-
-.progress {
-    background: linear-gradient(#131219, #131219) padding-box, linear-gradient(var(--angle),
-            #a406ee,
-            #360cf1) border-box;
-}
 
 @keyframes rotate {
     to {
@@ -71,4 +38,36 @@
     syntax: "<angle>";
     initial-value: 0deg;
     inherits: false;
+}
+
+.pending {
+    border: 4px solid #0000;
+    background: linear-gradient(var(--main-card-bg-color), var(--main-card-bg-color)) padding-box, linear-gradient(var(--angle),
+            #14bae4,
+            #687aff) border-box;
+}
+
+
+
+.now {
+    border: 4px solid #0000;
+    background: linear-gradient(var(--main-card-bg-color), var(--main-card-bg-color)) padding-box, linear-gradient(var(--angle),
+            #0af03c,
+            #16e4eb) border-box;
+}
+
+
+.canceled {
+    border: 4px solid #0000;
+    background: linear-gradient(var(--main-card-bg-color), var(--main-card-bg-color)) padding-box, linear-gradient(var(--angle),
+            #752b21b7,
+            #ff0202) border-box;
+}
+
+
+.modified {
+    border: 4px solid #0000;
+    background: linear-gradient(var(--main-card-bg-color), var(--main-card-bg-color)) padding-box, linear-gradient(var(--angle),
+            #8f8d19e7,
+            #e9ec08) border-box;
 }
