--- a/client-side/timetable-react/src/components/Table/Table.module.css
+++ b/client-side/timetable-react/src/components/Table/Table.module.css
@@ -12,10 +12,7 @@
 }
 
 .groupName{
-    color: white;
     align-self: center;
-}
-
-p{
-    color: white
+    cursor: pointer;
+    padding: 5px;
 }
