--- a/client-side/timetable-react/src/components/App.module.css
+++ b/client-side/timetable-react/src/components/App.module.css
@@ -65,3 +65,11 @@ button:active {
 }
 
 
+select {
+    padding: 0 1em;
+    color: #fff;
+    background-color: #252427;
+    cursor: pointer;
+    border-radius: 5px;
+    text-align-last: center;
+}
