--- a/client-side/timetable-react/src/components/GroupSelector/GroupSelector.module.css
+++ b/client-side/timetable-react/src/components/GroupSelector/GroupSelector.module.css
@@ -4,6 +4,14 @@
     display: flex;
     flex-direction: column;
     background-color: rgba(100, 148, 237, 0.199);
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+    border-radius: 15px;
+    background-color: rgba(0, 0, 0, 0.007)
 }
 
-
+button, select {
+    height: 25px;
+    min-width: 300px
+}
