--- a/client-side/timetable-react/src/components/GroupSelector/GroupSelector.module.css
+++ b/client-side/timetable-react/src/components/GroupSelector/GroupSelector.module.css
@@ -1,6 +1,6 @@
 .groupSelector{
-    width: 500px;
-    height: 500px;
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     background-color: rgba(100, 148, 237, 0.199);
