--- a/client-side/timetable-react/src/components/Card/Card.module.css
+++ b/client-side/timetable-react/src/components/Card/Card.module.css
@@ -17,7 +17,6 @@
     animation: 5s rotate linear infinite;
     background-color: var(--main-card-bg-color);
     border: 4px solid #12b86a85;
-
 }
 
 .info {
@@ -25,7 +24,6 @@
     flex-direction: column;
     justify-content: space-between;
 }
-
 
 @keyframes rotate {
     to {
@@ -41,32 +39,40 @@
 
 .pending {
     border: 4px solid #0000;
-    background: linear-gradient(var(--main-card-bg-color), var(--main-card-bg-color)) padding-box, linear-gradient(var(--angle),
-            #14bae4,
-            #687aff) border-box;
+    background: linear-gradient(
+                var(--main-card-bg-color),
+                var(--main-card-bg-color)
+            )
+            padding-box,
+        linear-gradient(var(--angle), #14bae4, #687aff) border-box;
 }
-
-
 
 .now {
     border: 4px solid #0000;
-    background: linear-gradient(var(--main-card-bg-color), var(--main-card-bg-color)) padding-box, linear-gradient(var(--angle),
-            #0af03c,
-            #16e4eb) border-box;
+    background: linear-gradient(
+                var(--main-card-bg-color),
+                var(--main-card-bg-color)
+            )
+            padding-box,
+        linear-gradient(var(--angle), #0af03c, #16e4eb) border-box;
 }
-
 
 .canceled {
     border: 4px solid #0000;
-    background: linear-gradient(var(--main-card-bg-color), var(--main-card-bg-color)) padding-box, linear-gradient(var(--angle),
-            #752b21b7,
-            #ff0202) border-box;
+    background: linear-gradient(
+                var(--main-card-bg-color),
+                var(--main-card-bg-color)
+            )
+            padding-box,
+        linear-gradient(var(--angle), #752b21b7, #ff0202) border-box;
 }
-
 
 .modified {
     border: 4px solid #0000;
-    background: linear-gradient(var(--main-card-bg-color), var(--main-card-bg-color)) padding-box, linear-gradient(var(--angle),
-            #8f8d19e7,
-            #e9ec08) border-box;
+    background: linear-gradient(
+                var(--main-card-bg-color),
+                var(--main-card-bg-color)
+            )
+            padding-box,
+        linear-gradient(var(--angle), #8f8d19e7, #e9ec08) border-box;
 }
