--- a/client-side/timetable-react/src/components/Card/Card.module.css
+++ b/client-side/timetable-react/src/components/Card/Card.module.css
@@ -39,40 +39,24 @@
 
 .pending {
     border: 4px solid #0000;
-    background: linear-gradient(
-                var(--main-card-bg-color),
-                var(--main-card-bg-color)
-            )
-            padding-box,
+    background: linear-gradient(var(--main-card-bg-color), var(--main-card-bg-color)) padding-box,
         linear-gradient(var(--angle), #14bae4, #687aff) border-box;
 }
 
 .now {
     border: 4px solid #0000;
-    background: linear-gradient(
-                var(--main-card-bg-color),
-                var(--main-card-bg-color)
-            )
-            padding-box,
+    background: linear-gradient(var(--main-card-bg-color), var(--main-card-bg-color)) padding-box,
         linear-gradient(var(--angle), #0af03c, #16e4eb) border-box;
 }
 
 .canceled {
     border: 4px solid #0000;
-    background: linear-gradient(
-                var(--main-card-bg-color),
-                var(--main-card-bg-color)
-            )
-            padding-box,
+    background: linear-gradient(var(--main-card-bg-color), var(--main-card-bg-color)) padding-box,
         linear-gradient(var(--angle), #752b21b7, #ff0202) border-box;
 }
 
 .modified {
     border: 4px solid #0000;
-    background: linear-gradient(
-                var(--main-card-bg-color),
-                var(--main-card-bg-color)
-            )
-            padding-box,
+    background: linear-gradient(var(--main-card-bg-color), var(--main-card-bg-color)) padding-box,
         linear-gradient(var(--angle), #8f8d19e7, #e9ec08) border-box;
 }
